@@ -587,6 +587,15 @@ END ?>
 			label = text('Threshold')
 			class = "numeric"
                } ?>
+          <td><?lsmb pricegroups.unshift({});
+                INCLUDE select element_data = {
+                     default_values = [pricegroup_id],
+                               name = 'pricegroup_id'
+                            options = pricegroups
+                              label = text('Pricegroup')
+                         value_attr = 'id'
+                          text_attr = 'pricegroup'
+                } ?></td>
 	</tr>
 
 	<tr id="taxform-threshold-row">
