@@ -5,6 +5,7 @@ Supported Presently
 Changelog for 1.3.22
 * Fixed error when trying to save multiple make/models for a part (Chris T)
 * Better error handling when date is entered into statement balance (Chris T)
+* Added pricegroup selection back to entity credit account (Chris T)
 
 Changelog for 1.3.21
 * Added a default numberformat in Form.pm (Chris T)
